[tool.poetry]
name = "positivespark"
version = "0.1.0"
description = ""
authors = ["jpsmithnl <jp.smith@mun.ca>"]

[tool.poetry.dependencies]
python = "^3.8"
tweepy = "^3.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
